# FIngerVisionCore

./: .project  .travis.yaml.FingerVisionCore  CMakeLists.txt  FingerVisionCore.conf  FingerVisionCore.sh  README.FingerVisionCore  README.md  RTC.xml  rtc.conf
ay_cpp/: cpp_util.h  gettimeofday.cpp  gettimeofday.h  sys_util.h
cmake/: fingervisioncore-config.cmake.in
config/: fv_test1.yaml  fv_video1.yaml  fv_video2.yaml
doc/: conf.py.in
doc/content/: index.txt  index_j.txt
include/: CMakeLists.txt
include/FingerVisionCore/: CMakeLists.txt  FingerVisionCore.h  FingerVisionSVC_impl.h
src/: CMakeLists.txt  FingerVisionCore.cpp  FingerVisionCoreComp.cpp  FingerVisionSVC_impl.cpp
test/include/FingerVisionCoreTest/: FingerVisionCoreTest.h
test/src/: FingerVisionCoreTest.cpp  FingerVisionCoreTestComp.cpp
